--- a/Xray/Xray.csproj
+++ b/Xray/Xray.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="DryIoc.dll" Version="5.0.1" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+    <PackageReference Include="WPF.ColorPicker" Version="5.0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
