--- a/Xray/Xray.csproj
+++ b/Xray/Xray.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="DryIoc.dll" Version="5.0.1" />
+    <PackageReference Include="GlobalHotKey" Version="1.1.0" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="WPF.ColorPicker" Version="5.0.0.1" />
   </ItemGroup>
 
